[package]
name = "amethyst-dungeon"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.12.0"               # Data-oriented game engine written in Rust
serde = "1.0.100"                 # A generic serialization/deserialization framework

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

default = ["vulkan"]